--- a/6/6.0-GA/compose/docker-compose.yml
+++ b/6/6.0-GA/compose/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     environment:
       discovery.type: single-node
   oap:
-    image: skywalking/oap:6.0.0-GA
+    image: apache/skywalking-oap-server:6.0.0-GA
     container_name: oap
     depends_on:
       - elasticsearch
@@ -39,7 +39,7 @@ services:
     volumes:
       - ./config:/skywalking/config:ro
   ui:
-    image: skywalking/ui:6.0.0-GA
+    image: apache/skywalking-ui:6.0.0-GA
     container_name: ui
     depends_on:
       - oap
