Increase JVM ES memory

--- a/6/6.2/compose/docker-compose.yml
+++ b/6/6.2/compose/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     environment:
       - discovery.type=single-node
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms2048m -Xmx2048m -Xmn512m"
     ulimits:
       memlock:
         soft: -1
