--- a/8/8.1.0/compose/docker-compose.yml
+++ b/8/8.1.0/compose/docker-compose.yml
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-version: '3.3'
+version: '3.8'
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.8.6
@@ -22,7 +22,12 @@ services:
     restart: always
     ports:
       - 9200:9200
-      - 9300:9300
+    healthcheck:
+      test: ["CMD-SHELL", "curl --silent --fail localhost:9200/_cluster/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     environment:
       - discovery.type=single-node
       - bootstrap.memory_lock=true
@@ -46,6 +51,12 @@ services:
     ports:
       - 11800:11800
       - 12800:12800
+    healthcheck:
+      test: ["CMD-SHELL", "/skywalking/bin/swctl"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     environment:
       SW_STORAGE: elasticsearch
       SW_STORAGE_ES_CLUSTER_NODES: elasticsearch:9200
@@ -66,3 +77,4 @@ services:
 volumes:
   data:
     driver: local
+
