--- a/8/8.2.0/compose-es7/docker-compose.yml
+++ b/8/8.2.0/compose-es7/docker-compose.yml
@@ -56,6 +56,7 @@ services:
     environment:
       SW_STORAGE: elasticsearch7
       SW_STORAGE_ES_CLUSTER_NODES: elasticsearch:9200
+      SW_HEALTH_CHECKER: default
   ui:
     image: apache/skywalking-ui:8.2.0
     container_name: ui
