--- a/8/8.2.0/compose-es7/docker-compose.yml
+++ b/8/8.2.0/compose-es7/docker-compose.yml
@@ -57,6 +57,7 @@ services:
       SW_STORAGE: elasticsearch7
       SW_STORAGE_ES_CLUSTER_NODES: elasticsearch:9200
       SW_HEALTH_CHECKER: default
+      SW_TELEMETRY: prometheus
   ui:
     image: apache/skywalking-ui:8.2.0
     container_name: ui
