--- a/8/8.2.0/compose/docker-compose.yml
+++ b/8/8.2.0/compose/docker-compose.yml
@@ -60,7 +60,9 @@ services:
     environment:
       SW_STORAGE: elasticsearch
       SW_STORAGE_ES_CLUSTER_NODES: elasticsearch:9200
-      JAVA_OPTS: "-Xms2048m -Xmx2048m" 
+      SW_HEALTH_CHECKER: default
+      SW_TELEMETRY: prometheus
+      JAVA_OPTS: "-Xms2048m -Xmx2048m"
   ui:
     image: apache/skywalking-ui:8.2.0
     container_name: ui
