Fix my stupid typo

--- a/java-agent/Makefile
+++ b/java-agent/Makefile
@@ -34,7 +34,7 @@ $(TARGETS):
 
 $(PUSH_TARGETS):
 	$(eval version := $(call word-dot,$@,2))
-	@(D) push apache/skywalking-java-agent:${SW_VERSION}-$(version) \
+	$(D) push apache/skywalking-java-agent:${SW_VERSION}-$(version) \
 
 alpine: BASE_IMAGE=alpine
 
