--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -72,7 +72,7 @@ services:
     ports:
       - 8080:8080
     environment:
-      SW_OAP_ADDRESS: oap:12800
+      SW_OAP_ADDRESS: http://oap:12800
 
 volumes:
   data:
