Improved docker compose file so can be run for ES6 and ES7 1. Updated compose file to include the SW_STORAGE env var otherwise it cant be overwritten when which between ES6 and ES7 2. Add missing env var SW_VERSION into env files 3. Updated versions of ES and SW to latest versions for both ES6 and ES7

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       retries: 3
       start_period: 40s
     environment:
-      SW_STORAGE: elasticsearch
+      SW_STORAGE: ${SW_STORAGE}
       SW_STORAGE_ES_CLUSTER_NODES: elasticsearch:9200
       SW_HEALTH_CHECKER: default
       SW_TELEMETRY: prometheus
