--- a/compose/.env.es7
+++ b/compose/.env.es7
@@ -14,6 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-ES_VERSION=7.5.0
+ES_VERSION=7.14.0
 SW_STORAGE=elasticsearch7
 IMAGE_TAG=es7
+SW_VERSION=8.7.0
